--- a/template.yaml
+++ b/template.yaml
@@ -36,6 +36,10 @@ Parameters:
     Description: Thumbnail width in pixels
     MinValue: 10
     MaxValue: 1000
+  AllowedImageExtensions:
+    Type: String
+    Default: jpg,jpeg,png,gif
+    Description: Comma-delimited list of allowed image file extensions (lowercase)
 Conditions:
   ContactEmailSet: !Not [ !Equals ['', !Ref ContactEmailAddress]]
 Resources:
@@ -49,7 +53,7 @@ Resources:
         ShowForm:
           Type: Api
           Properties:
-            Path: /
+            Path: /sign/{extension}
             Method: get
             RestApiId: !Ref WebApi
       Environment:
@@ -58,6 +62,7 @@ Resources:
           UPLOAD_LIMIT_IN_MB: !Ref UploadLimitInMb
           CORS_ORIGIN: !GetAtt WebAssetsS3Bucket.WebsiteURL
           THUMBNAILS_S3_BUCKET: !Ref ThumbnailsS3Bucket
+          ALLOWED_IMAGE_EXTENSIONS: !Ref AllowedImageExtensions
       Policies:
         - S3FullAccessPolicy:
             BucketName: !Ref UploadS3Bucket
@@ -120,6 +125,7 @@ Resources:
             Events: s3:ObjectCreated:*
       Timeout: 600
       MemorySize: 1024
+      ReservedConcurrentExecutions: 10
       Environment:
         Variables:
           OUTPUT_BUCKET: !Ref ThumbnailsS3Bucket
@@ -160,6 +166,11 @@ Resources:
     Properties:
       StageName: !Ref AppStage
       Cors: !Sub "'${WebAssetsS3Bucket.WebsiteURL}'"
+      MethodSettings:
+        - ResourcePath: '/*'
+          HttpMethod: '*'
+          ThrottlingBurstLimit: 20
+          ThrottlingRateLimit: 10
   ImageMagick:
     Type: AWS::Serverless::Application
     Properties:
